# ventilator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  init_db.sql  ventilator_db.sqlite
css/src/: bs-like.scss  general.scss  style.scss
src/: db.rs  main.rs  models.rs  schema.rs
src/context/: mod.rs
src/utils/: random.rs
static/css/: style.css
templates/: about.html.hbs  index.html.hbs  login.html.hbs  register.html.hbs
templates/partials/: footer.html.hbs  lists.html.hbs  navbar.html.hbs  post_form.html.hbs
