[package]
name = "ventilator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars"] }
handlebars = "5.0.0-beta.5"
serde = "1"
serde_derive = "1"
rocket-include-static-resources = "0.10"
diesel = { version = "2.1", features = ["sqlite"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_sqlite_pool"] }
dotenv = "0.15"
chrono = "0.4.31"
rand = { version = "0.8.5", features = [] }
